Fixes broken css rules by removing errant zero width space

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -7,50 +7,3 @@
 [id^='ZEEGA-player-'] {
   z-index: 99999;
 }
-
-.surface {
-  position: absolute;
-
-}
-
-#surface-la {
-  width: 100%;
-  z-index: 1;
-}
-
-#surface-mx {
-  position: relative;
-  z-index: 2;
-  width: 300px;
-  height: 250px;
-  margin: 0 auto;
-  border: 2px solid black;
-}
-
-
-
-#surface-player {
-  z-index: 2;
-  position: relative;
-
-  width: 960px;
-  height: 720px;
-  margin-top: -255px;
-  margin-left: -9999999px;
-}
-
-
-
-#la {
-  position: relative;
-  z-index: 1;
-  width: 960px;
-  height: 720px;
-  margin: 0 auto;
-}​
-
-#mx {
-  width: 300px;
-  height: 250px;
-  margin: 0 auto;
-}​
