--- a/app/css/sonic-trace.css
+++ b/app/css/sonic-trace.css
@@ -1,37 +1,51 @@
+.surface {
+  position: absolute;
+
+}
+
 #surface-la {
   width: 100%;
+  z-index: 1;
 }
-
-#la {
-  position: relative;
-  z-index: 8;
-  width: 960px;
-  height: 720px;
-  margin: 0 auto;
-}​
 
 #surface-mx {
-  width: 300px;
-}
 
-#mx {
-  position: absolute;
-  z-index: 998;
-  left: 0px;
-  bottom: 0px;
-  width: 300px;
+  z-index: 2;
+/*  width: 300px;
   height: 250px;
   margin: 0 auto;
   border: 2px solid black;
-}​
+*/}
 
-#zeega-player {
-  /*
-  height: 400px;
-  width: 600px;
-  margin: 0 auto;
-  */
+
+
+#surface-player {
+  z-index: 2;
+  position: relative;
+  width: 960px;
+  height: 720px;
+  margin-left: -9999px;
 }
+
+.center {
+  margin-left: auto;
+}
+
+
+
+#la {
+  position: relative;
+
+  width: 960px;
+  height: 720px;
+  margin: 0 auto;
+}
+
+#mx {
+  width: 300px;
+  height: 250px;
+  margin: 0 auto;
+}​
 
 #zeega-controls {
   width: 600px;
